  - repunit/1
  - stern_diatomic_series/1
  - n_choose_k/2
  - stirling_partition_number/2
  - schroder_number/1
  - chebyshev_triangle_coefficient/2
  - bernoulli_number/1
  - two_color_bracelet_with_period_count/2
  - two_color_bracelet_count/2
  - binary_partitions_count/1
  - nth_root_int/2
  - total_partitions/1
  - ordered_factorization_count/1
  - is_repunit?/1
  - is_repdigit?/1
  
 - Sequences 
  - A001567 - Fermat pseudoprimes to base 2, also called Sarrus numbers or Poulet numbers.
  - A005935 - Pseudoprimes to base 3.
  - A005936 - Pseudoprimes to base 5.
  - A005937 - Pseudoprimes to base 6.
  - A005938 - Pseudoprimes to base 7.
  - A005939 - Pseudoprimes to base 10.
  - A020136 - Fermat pseudoprimes to base 4.
  - A020137 - Pseudoprimes to base 8.
  - A020138 - Pseudoprimes to base 9.
  - A020139 - Pseudoprimes to base 11.
  - A020140 - Pseudoprimes to base 12.
  - A020141 - Pseudoprimes to base 13.
  - A020142 - Pseudoprimes to base 14.
  - A020143 - Pseudoprimes to base 15.
  - A020144 - Pseudoprimes to base 16.
  - A020145 - Pseudoprimes to base 17.
  - A020146 - Pseudoprimes to base 18.
  - A020147 - Pseudoprimes to base 19.
  - A020148 - Pseudoprimes to base 20.
  - A020149 - Pseudoprimes to base 21.
  - A020150 - Pseudoprimes to base 22.
  - A020151 - Pseudoprimes to base 23.
  - A020152 - Pseudoprimes to base 24.
  - A020153 - Pseudoprimes to base 25.
  - A020154 - Pseudoprimes to base 26.
  - A020155 - Pseudoprimes to base 27.
  - A020156 - Pseudoprimes to base 28.
  - A020157 - Pseudoprimes to base 29.
  - A020158 - Pseudoprimes to base 30.
  - A020159 - Pseudoprimes to base 31.
  - A020160 - Pseudoprimes to base 32.
  - A020161 - Pseudoprimes to base 33.
  - A020162 - Pseudoprimes to base 34.
  - A020163 - Pseudoprimes to base 35.
  - A020164 - Pseudoprimes to base 36.
  - A020165 - Pseudoprimes to base 37.
  - A020166 - Pseudoprimes to base 38.
  - A020167 - Pseudoprimes to base 39.
  - A020168 - Pseudoprimes to base 40.